# selkie

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  EVAL.md  LICENSE  README.md  state.json
.beads/: issues.jsonl
.claude/: ralph-loop.local.md  settings.json
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  deploy-playground.yml  publish.yml  test-playground.yml
docs/images/ascii/: architecture.txt  architecture_complex.txt  block.txt  block_complex.txt  c4.txt  class.txt  class_complex.txt  er.txt  er_complex.txt  flowchart_complex.txt  gantt.txt  gantt_complex.txt  git_graph.txt  git_graph_complex.txt  journey_complex.txt  kanban.txt  kanban_complex.txt  mindmap.txt  mindmap_complex.txt  pie.txt  pie_complex.txt  quadrant_complex.txt  radar.txt  radar_complex.txt  requirement.txt  requirement_complex.txt  sankey.txt  state.txt  state_complex.txt  state_complex2.txt  treemap.txt  treemap_complex.txt  xychart.txt  xychart_complex.txt
docs/images/tui/: architecture.txt  architecture_complex.txt  block.txt  block_complex.txt  c4_complex.txt  flowchart_complex.txt  journey.txt  packet.txt  packet_complex.txt  pie_complex.txt  quadrant.txt  radar.txt  sequence.txt  sequence_complex.txt  state_complex.txt  xychart.txt  xychart_complex.txt
docs/sources/: architecture.mmd  architecture_complex.mmd  block.mmd  block_complex.mmd  c4.mmd  c4_complex.mmd  channel_flowchart_clippy_fix.mmd  channel_flowchart_cross_tick_dedup.mmd  channel_flowchart_data_collection.mmd  channel_flowchart_dedup_logic.mmd  channel_flowchart_dispatch_chain.mmd  channel_flowchart_event_paths.mmd  channel_flowchart_event_sources.mmd  channel_flowchart_inline_graphics.mmd  channel_flowchart_launch_config.mmd  channel_flowchart_merged_pr_polling.mmd  channel_flowchart_message_indent.mmd  channel_flowchart_modal_click_paths.mmd  channel_flowchart_module_structure.mmd  channel_flowchart_orphan_tracker.mmd  channel_flowchart_refactoring.mmd  channel_flowchart_render_arch.mmd  channel_flowchart_render_message.mmd  channel_flowchart_render_paths.mmd  channel_flowchart_render_pipeline.mmd  channel_flowchart_resvg_removal.mmd  channel_flowchart_sccache_sharing.mmd  channel_flowchart_subgraphs_styled.mmd  channel_flowchart_task_completion.mmd  channel_flowchart_terminal_layers.mmd  channel_flowchart_test_approach.mmd  channel_flowchart_test_assertions.mmd  channel_flowchart_test_parallel.mmd  channel_flowchart_viewer_logic.mmd  channel_gitgraph_pr_merge.mmd  channel_sequence_lock_contention.mmd  channel_sequence_mouse_vs_touch.mmd  channel_sequence_review_flow.mmd  channel_sequence_touch_events.mmd  channel_state_cache_lifecycle.mmd  (+35 more)
playground/: app.js  benchmark.html  index.html  style.css
playground-tests/: package-lock.json  package.json  playwright.config.js
playground-tests/tests/: playground.spec.js
scripts/: install-hooks.sh
src/: config.rs  error.rs  kitty.rs  lib.rs  wasm.rs
src/common/: mod.rs  sanitize.rs
src/diagrams/: detect.rs  direction.rs  directive.rs  mod.rs
src/diagrams/architecture/: architecture.pest  mod.rs  parser.rs  types.rs
src/diagrams/block/: block.pest  mod.rs  parser.rs  types.rs
src/diagrams/c4/: c4.pest  mod.rs  parser.rs  types.rs
src/diagrams/class/: class.pest  mod.rs  parser.rs  types.rs
src/diagrams/er/: er.pest  mod.rs  parser.rs  types.rs
src/diagrams/flowchart/: flowchart.pest  mod.rs  parser.rs  types.rs
src/diagrams/gantt/: gantt.pest  mod.rs  parser.rs  types.rs
src/diagrams/git/: git.pest  mod.rs  parser.rs  types.rs
src/diagrams/info/: mod.rs  parser.rs  types.rs
src/diagrams/journey/: journey.pest  mod.rs  parser.rs  types.rs
src/diagrams/kanban/: kanban.pest  mod.rs  parser.rs  types.rs
src/diagrams/mindmap/: mod.rs  parser.rs  types.rs
src/diagrams/packet/: mod.rs  packet.pest  parser.rs  types.rs
src/diagrams/pie/: mod.rs  parser.rs  types.rs
src/diagrams/quadrant/: mod.rs  parser.rs  quadrant.pest  types.rs
src/diagrams/radar/: mod.rs  parser.rs  radar.pest  types.rs
src/diagrams/requirement/: mod.rs  parser.rs  requirement.pest  types.rs
src/diagrams/sankey/: mod.rs  parser.rs  sankey.pest  types.rs
src/diagrams/sequence/: mod.rs  parser.rs  sequence.pest  types.rs
src/diagrams/state/: mod.rs  parser.rs  state.pest  types.rs
src/diagrams/timeline/: mod.rs  parser.rs  timeline.pest  types.rs
src/diagrams/treemap/: mod.rs  parser.rs  treemap.pest  types.rs
src/diagrams/xychart/: mod.rs  parser.rs  types.rs  xychart.pest
src/eval/: ascii_checks.rs  cache.rs  checks.rs  mod.rs  png.rs  report.rs  runner.rs  samples.rs  ssim.rs  tui_checks.rs
src/layout/: adapter.rs  graph.rs  mod.rs  size.rs  types.rs
src/layout/dagre/: acyclic.rs  compound.rs  edge_labels.rs  graph.rs  mod.rs  nesting_graph.rs  normalize.rs  parent_dummy_chains.rs  self_edges.rs  util.rs
src/render/: architecture.rs  block.rs  c4.rs  class.rs  er.rs  flowchart.rs  gantt.rs  git.rs  journey.rs  kanban.rs  mindmap.rs  mod.rs  packet.rs  pie.rs  quadrant.rs  radar.rs  requirement.rs  sankey.rs  sequence.rs  state.rs  text_utils.rs  timeline.rs  treemap.rs  xychart.rs
tests/: architecture_rendering.rs  block_rendering.rs  c4_rendering.rs  flowchart_edge_label_truncation.rs  git_render.rs  journey_render.rs  kanban_render.rs  mindmap_rendering.rs  packet_rendering.rs  quadrant_render.rs  radar_render.rs  render_integration.rs  requirement_rendering.rs  sequence_rendering.rs  test_ascii_edge_case.rs  test_ascii_label.rs  treemap_rendering.rs  wasm_api.rs  xychart_render.rs
tests/js/: selkie_api.test.cjs
tests/render_fixtures/: decision.mmd  shapes.mmd  simple_chain.mmd
tools/benchmark/: benchmark.mjs  cli-benchmark.mjs  package-lock.json  package.json
tools/gallery/: analyze_diff.rs  generate.rs  loader.mjs  package-lock.json  package.json  render_reference.mjs  setup-dom.mjs
tools/validation/: extract_diagrams.mjs  package.json  render_mermaid.mjs  render_mermaid_playwright.mjs  validate_mermaid.mjs
tools/wasm/: .gitignore  benchmark.mjs  package-lock.json  package.json  test.mjs
(+71 files in other folders)
