[package]
name = "mermaid-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust port of mermaid.js - a diagramming and charting library"
license = "MIT"
repository = "https://github.com/mermaid-rs/mermaid-rs"
keywords = ["diagram", "chart", "flowchart", "sequence", "mermaid"]
categories = ["visualization", "parsing"]

[lib]
name = "mermaid"
path = "src/lib.rs"

[dependencies]
# Parsing
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling (for gantt charts)
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Regular expressions
regex = "1.10"

# Error handling
thiserror = "1.0"

# HTML sanitization
ammonia = "4"

# Logging
log = "0.4"

# File globbing (for CLI tools)
glob = "0.3"

[dev-dependencies]
# Testing
pretty_assertions = "1.4"

[[bin]]
name = "extract-diagrams"
path = "src/bin/extract_diagrams.rs"

[[bin]]
name = "cross-validate"
path = "src/bin/cross_validate.rs"

[features]
default = []
cli = ["clap"]

[dependencies.clap]
version = "4.4"
features = ["derive"]
optional = true
