[package]
name = "mermaid-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the mermaid diagramming parser and renderer"
license = "MIT"
repository = "https://github.com/mermaid-rs/mermaid-rs"
keywords = ["diagram", "chart", "flowchart", "sequence", "mermaid"]
categories = ["visualization", "parsing"]

[lib]
name = "mermaid"
path = "src/lib.rs"

[dependencies]
# Parsing
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling (for gantt charts)
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Regular expressions
regex = "1.10"

# Error handling
thiserror = "1.0"

# HTML sanitization
ammonia = "4"

# Logging
log = "0.4"

# File globbing (for CLI tools)
glob = "0.3"

# XML parsing (for SVG analysis)
roxmltree = "0.20"

[dev-dependencies]
# Testing
pretty_assertions = "1.4"

[[bin]]
name = "extract-diagrams"
path = "src/bin/extract_diagrams.rs"

[[bin]]
name = "cross-validate"
path = "src/bin/cross_validate.rs"

[[bin]]
name = "render-validate"
path = "src/bin/render_validate.rs"

[[bin]]
name = "gallery-generate"
path = "tools/gallery/generate.rs"

[[bin]]
name = "analyze-diff"
path = "tools/gallery/analyze_diff.rs"

[[bin]]
name = "selkie"
path = "src/bin/selkie.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]
png = ["resvg"]
pdf = ["svg2pdf", "resvg"]
kitty = ["resvg", "base64", "libc", "atty", "image"]
all-formats = ["png", "pdf", "kitty"]

[dependencies.clap]
version = "4.4"
features = ["derive"]
optional = true

[dependencies.resvg]
version = "0.45"
optional = true

[dependencies.svg2pdf]
version = "0.13"
optional = true

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.atty]
version = "0.2"
optional = true

[dependencies.image]
version = "0.25"
optional = true
